--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="">Home</a></li>
         <li><a href="">Works</a></li>
         <li><a href="">About</a></li>
-        <li><a href="">Contacts</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
 
       <button class="icon" id="toggle">
