--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav id="nav">
       <ul>
         <li><a href="">Home</a></li>
-        <li><a href="">Works</a></li>
+        <li><a href="">Work</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
